# T_Rex_Clone_SFML

./: CMakeLists.txt  README.md  main.cpp
